# audio-convert-rs

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: docker.yml  rust.yml
example/load/: Dockerfile  Makefile  load.js
ffmpeg/: Makefile
protos/: audio_convert.proto
src/: lib.rs  main.rs  otel.rs  service.rs
src/example/: main.rs
src/ffmpeg/: mod.rs  transcoder.rs  wrapper.rs
src/ulaw/: transcoder.rs
