[package]
name = "audio-convert-rs"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
prost = "0.13"
tonic = { version = "0.13", features = ["server"] }
tokio = { version = "1.43", features = ["full", "tracing"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
async-trait = "0.1"
chrono = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
tonic-reflection = "0.13"
tempfile = "3.16"
async-tempfile = "0.6"
tokio-util = "0.7"
tower-http = { version = "0.6", features = ["limit", "timeout", "trace"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
thiserror = "1.0"
tower = { version = "0.5", features = ["load-shed", "limit", "util"] }
tonic-health = "0.13"
opentelemetry = "0.26"
opentelemetry_sdk = { version="0.26", features = ["trace", "rt-tokio"] }
opentelemetry-stdout = { version = "0.26", features = ["trace"] }
tracing-opentelemetry = "0.27"
opentelemetry-otlp = { version = "0.26", features = ["http-json", "trace", "reqwest-client"] }
opentelemetry-http = "0.26"
openssl = { version = "0.10", features = ["vendored"] }
tokio-retry = "0.3"
tokio-stream = "0.1"
futures = "0.3"
ffmpeg-the-third = { version = "3.0.1", features = [] } 
http = "1.3"
hound = "3.5"
rubato = "0.16"
rvoip-codec-core = "0.1.26"


[build-dependencies]
tonic-build = "0.13"

[[bin]]
name = "audio-convert-rs"
path = "src/main.rs"

[[bin]]
name = "audio-convert-rs-cl"
path = "src/example/main.rs"
